Consolidate test workflows [4/n] (#10610)

--- a/.github/workflows/testing_latest.yml
+++ b/.github/workflows/testing_latest.yml
@@ -26,16 +26,28 @@ concurrency:
   cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 
 jobs:
-  cpu:
+  latest:
     if: github.repository == 'pyg-team/pytorch_geometric'
     uses: ./.github/workflows/_testing.yml
     with:
       test-matrix: |
         {
-          "os": ["ubuntu-22.04", "macos-14", "windows-2022"],
-          "python-version": ["3.10"],
-          "torch-version": ["2.8.0"],
-          "cuda-version": ["cpu"]
+          os: ["ubuntu-22.04", "macos-14", "windows-2022"],
+          python-version: ["3.10"],
+          torch-version: ["2.8.0"],
+          cuda-version: ["cpu"]
+        }
+
+  nightly:
+    if: github.repository == 'pyg-team/pytorch_geometric'
+    uses: ./.github/workflows/_testing.yml
+    with:
+      test-matrix: |
+        {
+          os: ["ubuntu-22.04"],
+          python-version: ["3.10"],
+          torch-version: ["nightly"],
+          cuda-version: ["cpu"]
         }
 
   # gpu:
