--- a/.github/workflows/testing_latest.yml
+++ b/.github/workflows/testing_latest.yml
@@ -32,10 +32,22 @@ jobs:
     with:
       test-matrix: |
         {
-          os: ["ubuntu-22.04", "macos-14", "windows-2022"],
-          python-version: ["3.10"],
-          torch-version: ["2.8.0"],
-          cuda-version: ["cpu"]
+          "os": ["ubuntu-22.04", "macos-14", "windows-2022"],
+          "python-version": ["3.10"],
+          "torch-version": ["2.8.0"],
+          "cuda-version": ["cpu"]
+        }
+
+  prev:
+    if: github.repository == 'pyg-team/pytorch_geometric'
+    uses: ./.github/workflows/_testing.yml
+    with:
+      test-matrix: |
+        {
+          "os": ["ubuntu-22.04"],
+          "python-version": ["3.10"],
+          "torch-version": ["2.6.0", "2.7.0"],
+          "cuda-version": ["cpu"]
         }
 
   nightly:
@@ -44,10 +56,10 @@ jobs:
     with:
       test-matrix: |
         {
-          os: ["ubuntu-22.04"],
-          python-version: ["3.10"],
-          torch-version: ["nightly"],
-          cuda-version: ["cpu"]
+          "os": ["ubuntu-22.04"],
+          "python-version": ["3.10"],
+          "torch-version": ["nightly"],
+          "cuda-version": ["cpu"]
         }
 
   # gpu:
