--- a/.github/workflows/_testing.yml
+++ b/.github/workflows/_testing.yml
@@ -39,12 +39,12 @@ jobs:
       - name: Install main package (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
-          uv pip install -e ".[test]"
+          uv pip install -e ".[test,rag]"
 
       - name: Install main package
         if: ${{ runner.os != 'Windows' }}
         run: |
-          uv pip install -e ".[full,test]"
+          uv pip install -e ".[full,test,rag]"
 
       - name: Check installation
         run: |
