--- a/.github/workflows/_testing.yml
+++ b/.github/workflows/_testing.yml
@@ -54,7 +54,7 @@ jobs:
         shell: bash
 
       - name: Run tests
-        timeout-minutes: 40
+        timeout-minutes: ${{ inputs.timeout }}
         run: |
           pytest --cov --cov-report=xml --durations 10
         env:
