--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -61,6 +61,7 @@ jobs:
     if: ${{ needs.trigger.outputs.triggered == 'true' && github.repository == 'pyg-team/pytorch_geometric' && github.event_name != 'schedule' }}
     uses: ./.github/workflows/_testing.yml
     with:
+      timeout-minutes: 40
       test-matrix: |
         { include: [
           { "os": "ubuntu-22.04", "python-version": "3.10", "torch-version": "nightly", "cuda-version": "cpu" },
@@ -76,6 +77,7 @@ jobs:
     if: ${{ github.repository == 'pyg-team/pytorch_geometric' && github.event_name == 'schedule' }}
     uses: ./.github/workflows/_testing.yml
     with:
+      timeout-minutes: 40
       test-matrix: |
         {
           "os": ["ubuntu-22.04", "macos-14", "windows-2022"],
@@ -89,6 +91,7 @@ jobs:
   #   if: github.repository == 'pyg-team/pytorch_geometric'
   #   uses: ./.github/workflows/_testing.yml
   #   with:
+  #    timeout-minutes: 40
   #     test-matrix: |
   #       {
   #         "os": [["self-hosted, nvidia"]],
